--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    /*implementation 'org.springframework.boot:spring-boot-starter-security'*/
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.h2database:h2:2.2.224'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+    /*testImplementation 'org.springframework.security:spring-security-test'*/
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
